testdata/baselines/reference/compiler/declareGlobalLuauStyle.errors.txt
main.tlua(3,1): error TS2588: Cannot assign to 'version' because it is a constant.
main.tlua(4,1): error TS2588: Cannot assign to 'limits' because it is a constant.
main.tlua(5,7): error TS2322: Type 'string' is not assignable to type 'boolean'.


==== globals.d.tlua (0 errors) ====
    declare version: string;
    declare limits: { min: number, max: number };
    
==== main.tlua (3 errors) ====
    local n: number = limits.min;
    local s: string = version;
    version = "overwritten"; // error: constant
    ~~~~~~~
!!! error TS2588: Cannot assign to 'version' because it is a constant.
    limits = { min = 0, max = 1 }; // error: constant
    ~~~~~~
!!! error TS2588: Cannot assign to 'limits' because it is a constant.
    local bad: boolean = version; // error: string not boolean
          ~~~
!!! error TS2322: Type 'string' is not assignable to type 'boolean'.
    